Compiler Bouw/compiler/test/basic/stephen/fail/types.cvc
// Should produce a type checking error because 7.0 is a float.

#include "civic.h"

export int main() {
    int a = 0;
    a = 7.0;
    return 0;
}
